// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`binotype.Content.Node > Object.from: 'fragment' 1`] = `
{
  "attributes": {},
  "children": [
    {
      "text": "Hello ",
    },
    {
      "attributes": {},
      "children": [
        {
          "text": "world",
        },
      ],
      "tag": "strong",
    },
  ],
}
`;

exports[`binotype.Content.Node > Object.from: 'nested element node' 1`] = `
{
  "attributes": {},
  "children": [
    {
      "text": "Hello ",
    },
    {
      "attributes": {},
      "children": [
        {
          "text": "world",
        },
      ],
      "tag": "strong",
    },
  ],
  "tag": "p",
}
`;

exports[`binotype.Content.Node > Object.from: 'paragraph node' 1`] = `
{
  "attributes": {},
  "children": [
    {
      "text": "Hello",
    },
  ],
  "tag": "p",
}
`;
